# cbMind

./: README.md  eval.py  main.py  pyproject.toml
.workbuddy/memory/: 2026-04-14.md
dataset/: dataset.md  lm_dataset.py
method/: RSMnorm.py  rope.py
model/: model.py  model_lora.py
model/internlm2-1_8b-reward/: model_name.txt
trainer/: train_dpo.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  trainer.md  trainer_utils.py
trainer/.workbuddy/memory/: 2026-04-21.md
