[project]
name = "cbmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "einops>=0.4.0",
    "protobuf>=6.28.0",
]
[tool.ruff]
select = ["E", "F", "W", "C90"]
ignore = ["E501"] 
line-length = 100
